--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+include/
 
 # Installer logs
 pip-log.txt
@@ -51,4 +52,7 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+
+#PyCharm files
+.idea
 
